Desenvolvimento da API da lista de rotas
Related Work Items: #1100

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -277,6 +277,7 @@
     <Compile Include="Controllers\Produtos\V1\SubgruposProduto\DeleteSubgruposProdutoController.cs" />
     <Compile Include="Controllers\Produtos\V1\SubgruposProduto\PatchSubgruposProdutoController.cs" />
     <Compile Include="Controllers\Produtos\V1\SubgruposProduto\PostSubgruposProdutoController.cs" />
+    <Compile Include="Controllers\Rotas\V1\DeleteRotasController.cs" />
     <Compile Include="Controllers\Sinais\V1\SinaisController.cs" />
     <Compile Include="Controllers\Sinais\V1\GetSinaisController.cs" />
     <Compile Include="Controllers\Beneficiamentos\V1\PostBeneficiamentosController.cs" />
@@ -415,6 +416,7 @@
     <Compile Include="Helper\Imagens\Estrategias\Exibicao\ExibicaoPecaProducaoStrategy.cs" />
     <Compile Include="Helper\Producao\TraducaoOrdenacaoListaProducao.cs" />
     <Compile Include="Helper\Fornecedores\TraducaoOrdenacaoListaFornecedores.cs" />
+    <Compile Include="Helper\Rotas\TraducaoOrdenacaoListaRotas.cs" />
     <Compile Include="Helper\TabelasDescontoAcrescimoCliente\ConverterCadastroAtualizacaoParaTabelaDescontoAcrescimoCliente.cs" />
     <Compile Include="Helper\TabelasDescontoAcrescimoCliente\TraducaoOrdenacaoListaTabelasDescontoAcrescimoCliente.cs" />
     <Compile Include="Helper\Produtos\SubgruposProduto\ConverterCadastroAtualizacaoParaSubgrupoProduto.cs" />
@@ -483,6 +485,10 @@
     <Compile Include="Helper\Respostas\SemConteudo.cs" />
     <Compile Include="Helper\Respostas\CriadoDto.cs" />
     <Compile Include="Helper\Respostas\MensagemDto.cs" />
+    <Compile Include="Models\Rotas\V1\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Rotas\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Rotas\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\Rotas\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Models\TabelasDescontoAcrescimoCliente\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\TabelasDescontoAcrescimoCliente\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\TabelasDescontoAcrescimoCliente\V1\Lista\ListaDto.cs" />
