--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -482,6 +482,7 @@
     <Content Include="Vue\Clientes\Sugestoes\Componentes\LstSugestaoCliente.js" />
     <Content Include="Vue\Clientes\Sugestoes\Templates\LstSugestaoCliente.Filtro.html" />
     <Content Include="Vue\Clientes\Tipos\Componentes\LstTipos.js" />
+    <Content Include="Vue\Producao\Turnos\Componentes\LstTurnos.js" />
     <Content Include="Vue\Produtos\GruposProduto\Componentes\LstGruposProduto.js" />
     <Content Include="Vue\Feriados\Componentes\LstFeriados.js" />
     <Content Include="Vue\Comissionados\Componentes\LstComissionados.Filtro.js" />
@@ -696,7 +697,6 @@
     <Content Include="Cadastros\CadTransportador.aspx" />
     <Content Include="Cadastros\CadTrasnfCxGeralParaCxDiario.aspx" />
     <Content Include="Cadastros\CadTrocaDev.aspx" />
-    <Content Include="Cadastros\CadTurno.aspx" />
     <Content Include="Cadastros\CadValorRetidoFonte.aspx" />
     <Content Include="Cadastros\CadVeiculos.aspx" />
     <Content Include="Cadastros\CadVolume.aspx" />
@@ -4555,13 +4555,6 @@
     </Compile>
     <Compile Include="Cadastros\CadTrocaDev.aspx.designer.cs">
       <DependentUpon>CadTrocaDev.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Cadastros\CadTurno.aspx.cs">
-      <DependentUpon>CadTurno.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Cadastros\CadTurno.aspx.designer.cs">
-      <DependentUpon>CadTurno.aspx</DependentUpon>
     </Compile>
     <Compile Include="Cadastros\CadValorRetidoFonte.aspx.cs">
       <DependentUpon>CadValorRetidoFonte.aspx</DependentUpon>
