--- a/Api/Glass.Api.Host/packages.config
+++ b/Api/Glass.Api.Host/packages.config
@@ -36,6 +36,7 @@
   <package id="DotNetZip" version="1.10.1" targetFramework="net461" />
   <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="GDA.Provider.MySql" version="1.0.4.1" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
@@ -53,7 +54,7 @@
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net461" />
-  <package id="MySql.Data" version="6.9.11" targetFramework="net461" />
+  <package id="MySql.Data" version="8.0.12" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
