--- a/Comum/Glass.Comum/packages.config
+++ b/Comum/Glass.Comum/packages.config
@@ -9,8 +9,9 @@
   <package id="Colosoft.Text" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Validation" version="1.0.0" targetFramework="net461" />
   <package id="editorconfig" version="0.12.1" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.0.4.701" targetFramework="net461" />
-  <package id="MySql.Data" version="6.9.11" targetFramework="net461" />
+  <package id="MySql.Data" version="8.0.12" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net461" developmentDependency="true" />
 </packages>
