--- a/Glass/packages.config
+++ b/Glass/packages.config
@@ -40,9 +40,10 @@
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net461" />
   <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="GDA.Provider.MySql" version="1.0.4.1" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="MySql.Data" version="6.9.11" targetFramework="net461" />
+  <package id="MySql.Data" version="8.0.12" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NPOI" version="2.2.1" targetFramework="net461" />
   <package id="NReco.PdfGenerator" version="1.1.12.0" targetFramework="net461" />
