--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -260,6 +260,8 @@
     <Compile Include="Controllers\Datas\V1\Feriados\PatchFeriadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\PostFeriadosController.cs" />
     <Compile Include="Controllers\PlanosConta\V1\DeletePlanosContaController.cs" />
+    <Compile Include="Controllers\PlanosConta\V1\GruposConta\GetGruposContaController.cs" />
+    <Compile Include="Controllers\PlanosConta\V1\GruposConta\GruposContaController.cs" />
     <Compile Include="Controllers\PlanosConta\V1\PatchPlanosContaController.cs" />
     <Compile Include="Controllers\PlanosConta\V1\PostPlanosContaController.cs" />
     <Compile Include="Controllers\Producao\V1\DeleteProducaoController.cs" />
